<resources>
    <string name="app_name">INFS3605 Community Management</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="name_increase">Name (A-Z)</string>
    <string name="name_decrease">Name (Z-A)</string>
    <string name="save">Save</string>
    <string name="note">Note session</string>
    <string name="check">Check</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="fullname">Full Name</string>
    <string name="password">Password</string>
    <string name="enterusername">Please enter username</string>
    <string name="enterpassword">Please enter 6-10 digits password</string>
    <string name="forgetpassword">Forget Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="next">Next</string>
    <string name="enteranswer">Please enter your answer here</string>
    <string name="usertype">Are you WWF staff?</string>
    <string name="allchallenges">All Challenges</string>
    <string name="foryou">For You</string>
    <string name="projecttheme">Project Theme: </string>
    <string name="areaofexperetise">Area of expertise required: </string>
    <string name="theme">Theme</string>
    <string name="apply">Apply Now</string>
    <string name="aboutyourself">About yourself</string>
    <string name="expertise">Expertise</string>
    <string name="profile">User Profile</string>
    <string name="enterfullname">Please enter full name</string>
    <string name="welcomescreen">Thank you for signing up - welcome to the Impactio community!</string>

    <string-array name="theme_array">
        <item>Climate and Energy</item>
        <item>Conservation, Nature and Oceans</item>
        <item>Food and Agriculture</item>
        <item>Pollution reduction</item>
        <item>Sustainable development</item>
        <item>Wealth sustainability</item>
    </string-array>

    <string-array name="expertise_array">
        <item>Community building, engagement and participation</item>
        <item>Environmental impact [based on the impact challenge themes]</item>
        <item>Financial sustainability, modelling and growth</item>
        <item>Indigenous Knowledge and leadership</item>
        <item>Technical skills and entrepreneurial mindset</item>
    </string-array>

    <string-array name="experience_array">
        <item>0-1 years</item>
        <item>1-2 years</item>
        <item>2-4 years</item>
        <item>4-6 years</item>
        <item>6-8 years</item>
        <item>8-10 years</item>
        <item>10+ years</item>
    </string-array>
</resources>