<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search"
        android:icon="@drawable/outline_search_24"
        android:iconTint="@color/white"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/sort"
        android:icon="@drawable/outline_sort_24"
        android:iconTint="@color/white"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/filterNameIncreasing"
                android:title="@string/name_increase" />
            <item
                android:id="@+id/filterNameDecreasing"
                android:title="@string/name_decrease" />
        </menu>
    </item>
</menu>